--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,27 @@
     <title>Shortly</title>
 </head>
 <body>
-    <div class="flex items-center justify-center h-screen bg-red-400">
-       
-
-    </div>
+    <nav class="relative container mx-auto">
+        <!-- flex -->
+        <div class="flex items-center justify-between">
+            <!-- flex/logo/menu -->
+            <div class="flex items-center space-x-20">
+                <!-- logo -->
+                <img src="../image/logo.svg" alt="">
+                <!-- left menu -->
+                <div class="hidden space-x-8 font-bold lg:flex">
+                    <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"> Features</a>
+                    <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"> Pricing</a>
+                    <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"> Resources</a>
+                </div>
+            </div>
+            <!-- right/butm menu -->
+            <div class="hidden items-center space-x-6 font-bold text-grayishViolet lg:flex">
+                <a href="#" class="hover:text-veryDarkViolet">Login</a>
+                <a href="#" class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70">Sign Up</a>
+            </div>
+            <!-- @todo hamburger -->
+        </div>
+    </nav>
 </body>
 </html>
