--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,18 @@
                 <a href="#" class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70">Sign Up</a>
             </div>
             <!-- @todo hamburger -->
+            <!-- @todo mobile -->
         </div>
     </nav>
+    <section class="hero">
+        <div class="container flex flex-col-reverse mx-auto p-6 lg:flex-row">
+            <!-- content container  -->
+            <div class="flex flex-col space-y-10 mb-44 lg:mt-16 lg:w-1/2 xl:mb-52">
+                <h1
+                class="text-5xl font-bold text-center lg:text-6xl lg:max-w-md lg:text-left"
+                > More than just shorter links</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
