--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,18 @@
                 <h1
                 class="text-5xl font-bold text-center lg:text-6xl lg:max-w-md lg:text-left"
                 > More than just shorter links</h1>
+                <p class=" text-2xl text-center text-gray-400 lg:max-w-md lg:text-left">
+                    Build your brand's recognition and get detailed insights on how your
+                    links are performing.
+                </p>
+                <div class="mx-auto lg:mx-0">
+                    <a href="#"
+                    class="bg-cyan py-5 px-10 text-2xl font-bold text-white rounded-full lg:py-4 hover:opacity-70">
+                        Get Started
+                    </a>
+                </div>
             </div>
+            <!-- image -->
         </div>
     </section>
 </body>
