image of section hero

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,9 @@
                 </div>
             </div>
             <!-- image -->
+            <div class="mb-24 mx-auto md:w-180 lg:mb-0 lg:w-1/2">
+                <img src="../image/illustration-working.svg" alt="">
+            </div>
         </div>
     </section>
 </body>
