--- a/src/index.html
+++ b/src/index.html
@@ -62,5 +62,15 @@
             </div>
         </div>
     </section>
+    <!-- Shorten section -->
+    <section id="shorten" class="relative bg-gray-100">
+        <!-- shorten container -->
+        <div class="max-w-4xl mx-auto p-6 space-y-6">
+            <!-- form -->
+            <form id="link-form" class="relative flex flex-col w-full  -mt-20 space-y-4 bg-darkViolet rounded-lg md:flex-row md:space-y-0 md:space-x-3">
+                <input type="text" placeholder="Shorten a link here" id="link-input" class="flex-1 p-3 border-2 rounded-lg placeholder-yellow-500 focus:outline-none">
+            </form>
+        </div>
+    </section>
 </body>
 </html>
