--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,10 @@
             <form id="link-form" class="relative flex flex-col w-full  -mt-20 space-y-4 bg-darkViolet rounded-lg md:flex-row md:space-y-0 md:space-x-3">
                 <input type="text" placeholder="Shorten a link here" id="link-input" class="flex-1 p-3 border-2 rounded-lg placeholder-yellow-500 focus:outline-none">
             </form>
+            <button class="bg-cyan text-white px-10 py-3 rounded-lg hover:bg-cyanLight focus:outline-none md:py-2">
+                Shorten It! 
+            </button>
+            <!-- error message -->
         </div>
     </section>
 </body>
