--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,42 @@
                 <div id="err-msg" class="absolute left-7 bottom-3 text-red text-sm italic ">
                 </div>
             </form>
+            <!-- link 1 -->
+            <div class="flex flex-col items-center justify-between w-full p-6 bg-white rounded-lg md:flex-row">
+                <p class="text-bold text-veryDarkViolet text-center md:text-left">
+                    https://frontendmentor.io
+                </p>
+                <div class="flex flex-col  items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+                    <div class="font-bold text-cyan">https://rel.ink/k4IKyk</div>
+                    <Button class="bg-cyan p-2 px-8 text-white rounded-lg hover:opacity-70 focus:outline-none">
+                        Copy
+                    </Button>
+                </div>
+            </div>
+             <!-- link 2 -->
+             <div class="flex flex-col items-center justify-between w-full p-6 bg-white rounded-lg md:flex-row">
+                <p class="text-bold text-veryDarkViolet text-center md:text-left">
+                    https://twitter.com/frontendmentor
+                </p>
+                <div class="flex flex-col  items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+                    <div class="font-bold text-cyan">https://rel.ink/gxOXp9</div>
+                    <Button class="bg-cyan p-2 px-8 text-white rounded-lg hover:opacity-70 focus:outline-none">
+                        Copy
+                    </Button>
+                </div>
+            </div>
+             <!-- link 3 -->
+             <div class="flex flex-col items-center justify-between w-full p-6 bg-white rounded-lg md:flex-row">
+                <p class="text-bold text-veryDarkViolet text-center md:text-left">
+                    https://linkedin.com/frontend-mentor
+                </p>
+                <div class="flex flex-col  items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+                    <div class="font-bold text-cyan">https://rel.ink/gob3X9</div>
+                    <Button class="bg-cyan p-2 px-8 text-white rounded-lg hover:opacity-70 focus:outline-none">
+                        Copy
+                    </Button>
+                </div>
+            </div>
         </div>
     </section>
 </body>
