--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,7 @@
                 </button>
                 <!-- error message -->
                 <div id="err-msg" class="absolute left-7 bottom-3 text-red text-sm italic ">
+                    
                 </div>
             </form>
             <!-- link 1 -->
@@ -124,5 +125,6 @@
             </p>
         </div>
     </section>
+    <script src="../js/script.js"></script>
 </body>
 </html>
