--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,15 @@
             </p>
         </div>
     </section>
+    <!-- Feature and box -->
+    <section id="feature" class="bg-gray-100 pb-32">
+        <div class="relative container flex flex-col items-start px-6 mx-auto md:flex-row md:space-x-7">
+            <!-- horizontal line -->
+            <div class=" hidden absolute top-24 w-10/12 left-16 h-3 bg-cyan md:block"></div>
+            <!-- vertical line -->
+            <div class=" absolute  w-2 left-1/2 h-full -ml-1 bg-cyan md:hidden"></div>
+        </div>
+    </section>
     <script src="../js/script.js"></script>
 </body>
 </html>
