--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,23 @@
             <div class=" hidden absolute top-24 w-10/12 left-16 h-3 bg-cyan md:block"></div>
             <!-- vertical line -->
             <div class=" absolute  w-2 left-1/2 h-full -ml-1 bg-cyan md:hidden"></div>
+            <!-- box 1 -->
+            <div class=" relative flex flex-col p-6 spaxc-y-6 bg-white rounded-lg md:w-1/3">
+                <!-- image -->
+                <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+                    <!-- image container -->
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img src="../image/icon-brand-recognition.svg" alt="">
+                    </div>
+                </div>
+                <h5>
+                    Brand Recognition
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Boost your brand recognition with each click. Generic links don't
+                    mean a thing. Branded links help instil confidence in your content.
+                </p>
+            </div>
         </div>
     </section>
     <script src="../js/script.js"></script>
