--- a/src/index.html
+++ b/src/index.html
@@ -135,13 +135,13 @@
             <!-- box 1 -->
             <div class=" relative flex flex-col p-6 spaxc-y-6 bg-white rounded-lg md:w-1/3">
                 <!-- image -->
-                <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+                <div class="absolute -ml-10 left-1/2 -top-10 md:left-32">
                     <!-- image container -->
                     <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
                         <img src="../image/icon-brand-recognition.svg" alt="">
                     </div>
                 </div>
-                <h5>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
                     Brand Recognition
                 </h5>
                 <p class="text-center text-gray-400 md:text-left">
