--- a/src/index.html
+++ b/src/index.html
@@ -132,10 +132,46 @@
             <div class=" hidden absolute top-24 w-10/12 left-16 h-3 bg-cyan md:block"></div>
             <!-- vertical line -->
             <div class=" absolute  w-2 left-1/2 h-full -ml-1 bg-cyan md:hidden"></div>
+
             <!-- box 1 -->
             <div class=" relative flex flex-col p-6 spaxc-y-6 bg-white rounded-lg md:w-1/3">
                 <!-- image -->
-                <div class="absolute -ml-10 left-1/2 -top-10 md:left-32">
+                <div class="absolute -ml-10 left-1/2 -top-10 ">
+                    <!-- image container -->
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img src="../image/icon-brand-recognition.svg" alt="">
+                    </div>
+                </div>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+                    Brand Recognition
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Boost your brand recognition with each click. Generic links don't
+                    mean a thing. Branded links help instil confidence in your content.
+                </p>
+            </div>
+
+               <!-- box 2 -->
+               <div class=" relative flex flex-col p-6 mt-24 spaxc-y-6 bg-white rounded-lg md:w-1/3 md:mt-8">
+                <!-- image -->
+                <div class="absolute -ml-10 left-1/2 -top-10">
+                    <!-- image container -->
+                    <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
+                        <img src="../image/icon-brand-recognition.svg" alt="">
+                    </div>
+                </div>
+                <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+                    Brand Recognition
+                </h5>
+                <p class="text-center text-gray-400 md:text-left">
+                    Boost your brand recognition with each click. Generic links don't
+                    mean a thing. Branded links help instil confidence in your content.
+                </p>
+            </div>
+               <!-- box 3 -->
+               <div class=" relative flex flex-col p-6 mt-24 spaxc-y-6 bg-white rounded-lg md:w-1/3 md:mt-16">
+                <!-- image -->
+                <div class="absolute -ml-10 left-1/2 -top-10">
                     <!-- image container -->
                     <div class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet">
                         <img src="../image/icon-brand-recognition.svg" alt="">
