--- a/src/index.html
+++ b/src/index.html
@@ -161,11 +161,11 @@
                     </div>
                 </div>
                 <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
-                    Brand Recognition
+                    Detailed records
                 </h5>
                 <p class="text-center text-gray-400 md:text-left">
-                    Boost your brand recognition with each click. Generic links don't
-                    mean a thing. Branded links help instil confidence in your content.
+                    Gain insights into who is clicking your links. Knowing when and
+                    where people engage with your content helps inform better decisions.
                 </p>
             </div>
                <!-- box 3 -->
@@ -178,11 +178,11 @@
                     </div>
                 </div>
                 <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
-                    Brand Recognition
+                    Fully customizable
                 </h5>
                 <p class="text-center text-gray-400 md:text-left">
-                    Boost your brand recognition with each click. Generic links don't
-                    mean a thing. Branded links help instil confidence in your content.
+                    Improve brand awareness and content discoverability through
+            customizable links, supercharging audience engagement.
                 </p>
             </div>
         </div>
