--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,12 @@
                 <a href="#" class="hover:text-veryDarkViolet">Login</a>
                 <a href="#" class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70">Sign Up</a>
             </div>
-            <!-- @todo hamburger -->
+            <!--  hamburger -->
+            <button id="menu-btn"class="block hamburger lg:hidden focus:ouline-none">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
             <!-- @todo mobile -->
         </div>
     </nav>
