--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <!-- flex -->
         <div class="flex items-center justify-between">
             <!-- flex/logo/menu -->
-            <div class="flex items-center space-x-20">
+            <div class="flex items-center pt-6 space-x-20">
                 <!-- logo -->
                 <img src="../image/logo.svg" alt="">
                 <!-- left menu -->
