--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,10 @@
             </div>
         </div>
     </section>
+    <!-- CTA section -->
+    <section id="cta" class="py-24 bg-darkViolet" >
+
+    </section>
     <script src="../js/script.js"></script>
 </body>
 </html>
