--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,14 @@
     </section>
     <!-- CTA section -->
     <section id="cta" class="py-24 bg-darkViolet" >
-
+        <div class=" flex flex-col p-2 space-y-6 ">
+            <h5 class="mx-auto space-y-10 text-4xl font-bold text-center text-white">
+                Bost your links today
+            </h5>
+            <button class="bg-cyan px-10 py-5 mx-auto text-2xl font-bold text-white rounded-full hover:bg-cyanLight md:text-base md:py-3 focus:outline-none">
+                Get Start
+            </button>
+        </div>
     </section>
     <script src="../js/script.js"></script>
 </body>
