--- a/src/index.html
+++ b/src/index.html
@@ -212,6 +212,17 @@
             </button>
         </div>
     </section>
+
+    <footer class="py-16 bg-veryDarkViolet">
+        <div class="container flex flex-col items-center justify-between mx-auto space-y-16 md:flex-row md:space-y-0 md:items-start">
+            <!-- logo -->
+            <img src="../image/logo.svg" alt="">
+            <!-- menu container -->
+            <div >
+
+            </div>
+        </div>
+    </footer>
     <script src="../js/script.js"></script>
 </body>
 </html>
