--- a/src/index.html
+++ b/src/index.html
@@ -218,8 +218,14 @@
             <!-- logo -->
             <img src="../image/logo.svg" alt="">
             <!-- menu container -->
-            <div >
-
+            <div class="flex flex-col space-y-16 md:space-y-0 md:space-x-20 md:flex-row" >
+                <!-- menu1  -->
+                <div class="flex flex-col items-center w-full md:items-center">
+                    <div>Features</div>
+                    <div>
+                        <a href="#">Link Shortening</a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
