--- a/src/index.html
+++ b/src/index.html
@@ -221,9 +221,17 @@
             <div class="flex flex-col space-y-16 md:space-y-0 md:space-x-20 md:flex-row" >
                 <!-- menu1  -->
                 <div class="flex flex-col items-center w-full md:items-center">
-                    <div>Features</div>
-                    <div>
-                        <a href="#">Link Shortening</a>
+                    <div class="text-white mb-5 font-bold capitalize">Features</div>
+                    <div class="flex flex-col items-center space-y-3 md:items-start">
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            Link Shortening
+                        </a>
+                        <a href="# " class="text-grayishViolet hover:text-cyan capitalize">
+                            Branded links
+                        </a>
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            Analytics
+                        </a>
                     </div>
                 </div>
             </div>
