--- a/src/index.html
+++ b/src/index.html
@@ -234,6 +234,39 @@
                         </a>
                     </div>
                 </div>
+                <!-- item2 -->
+                <div class="flex flex-col items-center w-full md:items-center">
+                    <div class="text-white mb-5 font-bold capitalize">Resources</div>
+                    <div class="flex flex-col items-center space-y-3 md:items-start">
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                          blog
+                        </a>
+                        <a href="# " class="text-grayishViolet hover:text-cyan capitalize">
+                            Developers
+                        </a>
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            Support
+                        </a>
+                    </div>
+                </div>
+                <!-- itme3 -->
+                <div class="flex flex-col items-center w-full md:items-center">
+                    <div class="text-white mb-5 font-bold capitalize">Company</div>
+                    <div class="flex flex-col items-center space-y-3 md:items-start">
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            About
+                        </a>
+                        <a href="# " class="text-grayishViolet hover:text-cyan capitalize">
+                            our team
+                        </a>
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            Careers
+                        </a>
+                        <a href="#" class="text-grayishViolet hover:text-cyan capitalize">
+                            Contact
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
